# django-todo

./: .gitignore  pyproject.toml
djangotodo/: db.sqlite3
djangotodo/djangotodo/: settings.py
djangotodo/todo/: forms.py  models.py  urls.py  views.py
djangotodo/todo/migrations/: 0001_initial.py
djangotodo/todo/templates/: todo.html
