[tool.poetry]
name = "djangotodo"
version = "0.1.0"
description = ""
authors = ["Hangzhi Yu <hangzhi@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-material = "^1.6.7"
django-yarnpkg = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
